--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
+    "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.2.2",
     "redux": "^3.0.4"
   }
